--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.10.0",
     "@vercel/postgres": "^0.7.2",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "next-auth": "^5.0.0-beta.15",
