Add @openrouter/ai-sdk-provider with streaming support

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@openrouter/ai-sdk-provider": "^2.2.3",
     "@prisma/client": "^5.10.0",
     "@vercel/postgres": "^0.7.2",
+    "ai": "^6.0.97",
     "clsx": "^2.1.0",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.344.0",
